--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="lead-content">
             <h1>Reshma Punukollu</h1>
             <h2>Data Engineer</h2>
-            <a href="./Reshma_Punukollu.pdf" class="btn-rounded-white">Download Resume</a>
+            <a target="_blank" href="./Reshma_Punukollu.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -256,7 +256,7 @@
                         <p>
                             A relational model was devised, and a Data Dictionary was produced to implement the Database design, which aimed to enhance the Bearcat Bank's business model by optimizing the structure of its system.
                         </p>
-                        <a href="#">View Project</a>
+                        <a target="_blank" href="https://github.com/reshma-ponukollu/Bearcat-Bank-design-upgradation-using-SQL-">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -272,7 +272,7 @@
                         <p>
                             The main objective of the project is to identify patterns in the buying behavior of customers within the income range of $50-74K, with a focus on the Grocery department. The aim is to enable Regork to make more informed decisions based on data analysis and ultimately enhance the shopping experience of this target group in the specified department. 
                         </p>
-                        <a href="#">View Project</a>
+                        <a target="_blank" href="https://github.com/reshma-ponukollu/Analysis-of-Purchasing-Trend-for-Regork-Customers-in-the-Mid-Level-Income-Groups-using-Python-">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -288,7 +288,7 @@
                         <p>
                             The online bookstore provides a platform for customers to browse and order books according to their preferences. In addition, customers have access to media reviews, which serve as a valuable source of information. The online bookstore serves as a connecting medium between customers and publishers, facilitating the process of purchasing books and making it more convenient for both parties. 
                         </p>
-                        <a href="#">View Project</a>
+                        <a target="_blank" href="https://github.com/reshma-ponukollu/BEARCAT-ONLINE-BOOKSTORE-design-by-using-concepts-of-systems-analysis-and-design-">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -304,7 +304,7 @@
                         <p>
                             Analysed using R, Python, and Tableau, the housing data collected for Cincinnati, OH provided insights into the purchasing trends and preferences of the population, ultimately helping those who are considering moving to the city make informed decisions. 
                         </p>
-                        <a href="#">View Project</a>
+                        <a target="_blank" href="https://github.com/reshma-ponukollu/Analysis-on-Cincinnati-housing-data-using-R-Python-and-Tableau-">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -320,7 +320,7 @@
                         <p>
                             Qualitative and quantitative data analyses were carried out on the complete journey data set to extract insights for the cosmetics department, which would help inform business decisions aimed at improving the sales of products.
                         </p>
-                        <a href="#">View Project</a>
+                        <a target="_blank" href="https://github.com/reshma-ponukollu/Data-Analysis-for-Cosmetics-Department-of-Regork-using-R-studio-">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -396,13 +396,11 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+                            <a href="https://reshma-ponukollu.github.io/" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </li>
+                       
                         <li>
-                            <a href="https://stackoverflow.com/" target="_blank"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://linkedin.com/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/reshma-punukollu/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                         <li>
                             <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
