--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
         </div>
         <!-- End #contact-form -->
     </div>
-    <!-- End #contact --> -->
+    <!-- End #contact --> 
 
     <footer>
         <div class="container">
