--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/bank-building.webp" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -264,7 +264,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/purchasing_trend_regork.jpeg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -280,7 +280,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/online-books-scaled.jpeg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -296,7 +296,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/cincinnati_hosuing.jpeg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -312,7 +312,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/cosmetics.webp" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
