--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/cosmetics.webp" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
