--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
             <li>Project Management</li>
             <li>Presentation</li>
             <li>Verbal Communication</li> 
-            <li>and Written Communication</li>
+            <li>Written Communication</li>
         </ul>
     </div>
     <!-- End #skills -->
