--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div id="lead-content">
             <h1>Reshma Punukollu</h1>
             <h2>Data Engineer</h2>
-            <a target="_blank" href="./Reshma_Punukollu.pdf" class="btn-rounded-white">Download Resume</a>
+            <a target="_blank" href="./Reshma_Punukollu_Resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
