--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                 <a href="#contact">Contact</a>
             </li>
         </ul>
+	    .sticky {
+ 	 position: fixed;
+  	top: 0;
+  	width: 100%;
+	}
     </header>
     <!-- End header -->
 
