--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>BEARCAT ONLINE BOOKSTORE design by using concepts of systems analysis and design</h3>
+                        <h3>Bearcat online bookstore design by using concepts of systems analysis and design</h3>
                         <p>
                             The online bookstore provides a platform for customers to browse and order books according to their preferences. In addition, customers have access to media reviews, which serve as a valuable source of information. The online bookstore serves as a connecting medium between customers and publishers, facilitating the process of purchasing books and making it more convenient for both parties. 
                         </p>
