--- a/index.html
+++ b/index.html
@@ -84,6 +84,42 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
+
+            <div data-date="Jul. 2023 – Present">
+                <h3>American Modern Insurance Group</h3>
+                <h4>Audit Data Analyst Intern</h4>
+                <p>
+                    <ul>
+                        <li>
+                            Devised efficient solutions for data-related challenges, contributing to a 20% reduction in data processing time.
+                        </li>
+                        <li>
+                            Optimized SQL queries for audit data retrieval, reducing query execution time by 30%.
+                        </li>
+                        <li>
+                            Achieved significant cost savings through Python automation, reducing manual audit hours by 30%.
+                        </li>
+                        <li>
+                            Utilized Excel to meticulously track and report compliance metrics, consistently achieving a 98% or higher adherence to
+                            industry regulations.
+                        </li>
+                        <li>
+                            Employed Power BI to develop interactive audit reports with drill-down features, enabling auditors to swiftly detect and rectify
+                            data anomalies, resulting in a 15% increase in operational efficiency.
+                        </li>
+                        <li>
+                            Crafted Cognos reports, boosting data clarity by 20% while concisely summarizing financial transactions, compliance metrics,
+                            and risk assessments within audit data.
+                        </li>
+                        <li>
+                            Executed deliverables according to Agile methodology using the Scrum framework, and put them into action through Jira and
+                            Azure DevOps.
+                        </li>
+                    </ul>
+
+                </p>
+            </div>
+
             <div data-date="May. 2022 – Jul. 2022">
                 <h3>Synchrony</h3>
                 <h4>Senior Analyst</h4>
